# qq-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml  qq-bot.service
qq_bot/: bot.py  config.py  llm.py  main.py  session.py
